--- a/style.css
+++ b/style.css
@@ -3,4 +3,15 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Overpass", sans-serif;
+} 
+
+:root {
+    --dark-blue: #262e38;
+    --light-grey: #969fad;
+    --medium-grey: #7c8798;
+    --orange: #fc7614;
+    --white: #fff;
+    --very-dark-blue: #131538;
+    --black-gradient: radial-gradient(98.96% 98.96% at 50% 0%, #232A34 0%, #101E27 1000% );
+
 }
