--- a/style.css
+++ b/style.css
@@ -86,10 +86,12 @@ body {
 }
 
 .botoes button:focus {
-
+    color: var(--white);
+    background-color: var(--light-grey);
 }
 
-.card > button {
+.card > a {
+    display: block;
     width: 100%;
     padding: 13px;
     background-color: var(--orange);
@@ -101,11 +103,13 @@ body {
     text-transform: uppercase;
     initial-letter: 2px;
     color: var(--white);
+    text-align: center;
+    text-decoration: none;
 
     transition: all ease-in-out 0.3s;
 }
 
-.card > button:hover {
+.card > a:hover {
     color: var(--orange);
     background-color: var(--white);
     cursor: pointer;
